--- a/docs/_layouts/viewer.html
+++ b/docs/_layouts/viewer.html
@@ -18,7 +18,7 @@ layout: default
   function sampleData() {
     // sample a random example
     var example = data[Math.floor(Math.random() * data.length)];
-    document.getElementById('article').value = example.article;
+    document.getElementById('article').value = example.text;
     document.getElementById('title').textContent = example.title;
     document.getElementById('id').textContent = example.id;
   }
