--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -3,6 +3,29 @@
 
   {%- include head.html -%}
 
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+
+  <script>
+    let data;
+    function main() {
+      data = {{ site.data.articles | jsonify }};
+      // console.log(data);
+    }
+    window.onload = function () {
+      main();
+      sampleData();
+    }
+
+    function sampleData() {
+      // sample a random example
+      var example = data[Math.floor(Math.random() * data.length)];
+      document.getElementById('article').value = example.text;
+      document.getElementById('title').textContent = example.title;
+      document.getElementById('id').textContent = example.id;
+    }
+  </script>
+
   <body>
 
     {%- include header.html -%}
@@ -10,6 +33,31 @@
     <main class="page-content" aria-label="Content">
       <div class="wrapper">
         {{ content }}
+      </div>
+      <div class="container w-50">
+        <div class="row">
+          <div class="col">
+            <h1 class="page-heading">{{ page.title }}</h1>
+          </div>
+          <div class="col d-flex justify-content-end">
+            <button onclick="sampleData()" class="btn btn-primary">Sample Example</button>
+          </div>
+        </div>
+        <br>
+        <div class="row">
+          <h3> ID </h3>
+          <p id="id"> </p>
+          <h3> Title </h3>
+          <p id="title"> </p>
+          <h3> Article </h3>
+          <textarea  id="article" cols="50" row="10" style="height: 400px;" readonly></textarea>
+          <!-- <div class="card">
+            <div class="card-body">
+              <p class="card-text" id="reference"> </p>
+              <textarea  id="article" cols="50" row="10" style="height: 400px;"></textarea>
+            </div>
+          </div> -->
+        </div>
       </div>
     </main>
 
