--- a/docs/_sass/minima/custom-variables.scss
+++ b/docs/_sass/minima/custom-variables.scss
@@ -1,4 +1,6 @@
 // Placeholder to allow overriding predefined variables smoothly.
 // $content-width:    90%;
-$content-width: 1600px;
-$on-laptop: 1600px;
+// $content-width: 1600px;
+// $on-laptop: 1600px;
+$content-width: 90%;
+$on-laptop: 90%;
